crates/products/agent-tools/tools/src/api/gitlab/tests/snapshots/wt_tools__api__gitlab__tests__cli_snapshots__retry_job.snap
---
source: crates/products/agent-tools/tools/src/api/gitlab/tests/cli_snapshots.rs
expression: "serde_json::to_string_pretty(&message).unwrap()"
---
{
  "data": "Retry requested for job 45.",
  "type": "confirmation"
}
