crates/products/agent-tools/tools/src/api/gitlab/tests/snapshots/wt_tools__api__gitlab__tests__cli_snapshots__show_comment.snap
---
source: crates/products/agent-tools/tools/src/api/gitlab/tests/cli_snapshots.rs
expression: "serde_json::to_string_pretty(&message).unwrap()"
---
{
  "data": {
    "author": "reviewer",
    "body": "General feedback.",
    "created_at": "2026-08-22T10:00:00Z",
    "handle": "124",
    "updated_at": "2026-08-22T11:00:00Z",
    "url": "https://gitlab.test/acme/widget/-/merge_requests/8#note_124"
  },
  "type": "general_comment"
}
